--- a/index.html/index.html
+++ b/index.html/index.html
@@ -135,7 +135,7 @@ body {
 </section>
 
 <section id="seccionEmpresa">
-    <h2>Datos del Trabajador</h2>
+    <h2>INGRESO DE TRABAJADORES</h2>
     <input type="text" id="nombre" placeholder="Nombre Completo">
     <input type="text" id="rut" placeholder="RUT">
     <input type="text" id="cargo" placeholder="Cargo">
@@ -146,7 +146,7 @@ body {
 </section>
 
 <section id="seccionHistorial">
-    <h2>Historial de Trabajadores Aprobados</h2>
+    <h3>HISTORIAL</h3>
     <table border="1">
         <thead>
             <tr><th>Nombre</th><th>RUT</th><th>Cargo</th><th>Centro</th><th>Fecha Ingreso</th><th>Curso</th><th>Fecha Aprobación</th><th>Certificado</th></tr>
