--- a/index.html/index.html
+++ b/index.html/index.html
@@ -162,9 +162,9 @@ body {
 let trabajadores = JSON.parse(localStorage.getItem("trabajadores")) || [];
 let historial = JSON.parse(localStorage.getItem("historial")) || [];
 const preguntasFinal = [
-    ["¿Los extintores deben estar en un lugar visible?", "verdadero"],
-    ["¿Los extintores no necesitan mantención?", "falso"],
-    ["¿Se debe apuntar a la base del fuego?", "verdadero"],
+    ["¿Los extintores deben estar en un lugar visible?", "si"],
+    ["¿Los extintores no necesitan mantención?", "no"],
+    ["¿Se debe apuntar a la base del fuego?", "si"],
 ];
 
 function ocultarTodo() {
