--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,18 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Acceso - Capacita SM</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 <style>
-body {
-    font-family: Arial, sans-serif;
-    background: url('fondo.png') no-repeat center center fixed;
-    background-size: cover;
+html, body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background: url('fondo.png') no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
+
+/* Mejoras adicionales para móviles */
+@media (max-width: 768px) {
+    body {
+        background-attachment: scroll; /* Evita bugs en móviles */
+    }
+}
+
 #menuPrincipal {
     background-color: rgba(255,255,255,0.95);
     padding: 30px;
@@ -28,10 +43,12 @@ body {
     align-items: center;
     width: 250px;
 }
+
 #menuPrincipal h2 {
     color: #4C7C46;
     margin-bottom: 20px;
 }
+
 #menuPrincipal button {
     width: 100%;
     margin: 10px 0;
@@ -43,52 +60,12 @@ body {
     border-radius: 6px;
     cursor: pointer;
 }
+
 #menuPrincipal button:hover {
     background-color: #3B6138;
 }
-#seccionTrabajador, #seccionEmpresa, #seccionHistorial, #moduloCurso, #evaluacionFinal, #mosaicoCursos {
-    display: none;
-    background: rgba(255,255,255,0.95);
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px;
-}
-.curso-tile {
-    background: #A3C95A;
-    padding: 10px;
-    margin: 10px;
-    display: inline-block;
-    width: 150px;
-    text-align: center;
-    border-radius: 6px;
-    cursor: pointer;
-}
-.boton-volver {
-    margin-top: 15px;
-    background-color: #A3C95A;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 6px;
-    cursor: pointer;
-}
-.boton-volver:hover {
-    background-color: #4C7C46;
-}
-
-.boton-volver {
-    margin-top: 15px;
-    background-color: #A3C95A;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 6px;
-    cursor: pointer;
-}
-.boton-volver:hover {
-    background-color: #4C7C46;
-}
 </style>
+
 </head>
 <body>
 
