--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,15 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Acceso - Capacita SM</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
 <style>
-html, body {
+    html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
-
 body {
     font-family: Arial, sans-serif;
     background: url('fondo.png') no-repeat center center;
@@ -24,14 +22,11 @@ body {
     align-items: center;
     justify-content: flex-start;
 }
-
-/* Mejoras adicionales para móviles */
-@media (max-width: 768px) {
+    @media (max-width: 768px) {
     body {
         background-attachment: scroll; /* Evita bugs en móviles */
     }
 }
-
 #menuPrincipal {
     background-color: rgba(255,255,255,0.95);
     padding: 30px;
@@ -43,12 +38,10 @@ body {
     align-items: center;
     width: 250px;
 }
-
 #menuPrincipal h2 {
     color: #4C7C46;
     margin-bottom: 20px;
 }
-
 #menuPrincipal button {
     width: 100%;
     margin: 10px 0;
@@ -60,12 +53,52 @@ body {
     border-radius: 6px;
     cursor: pointer;
 }
-
 #menuPrincipal button:hover {
     background-color: #3B6138;
 }
-</style>
+#seccionTrabajador, #seccionEmpresa, #seccionHistorial, #moduloCurso, #evaluacionFinal, #mosaicoCursos {
+    display: none;
+    background: rgba(255,255,255,0.95);
+    padding: 20px;
+    border-radius: 10px;
+    margin: 20px;
+}
+.curso-tile {
+    background: #A3C95A;
+    padding: 10px;
+    margin: 10px;
+    display: inline-block;
+    width: 150px;
+    text-align: center;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.boton-volver {
+    margin-top: 15px;
+    background-color: #A3C95A;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.boton-volver:hover {
+    background-color: #4C7C46;
+}
 
+.boton-volver {
+    margin-top: 15px;
+    background-color: #A3C95A;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.boton-volver:hover {
+    background-color: #4C7C46;
+}
+</style>
 </head>
 <body>
 
@@ -205,18 +238,18 @@ function cargarEvaluacionFinal() {
     const contenedor = document.getElementById('preguntasFinal');
     contenedor.innerHTML = "";
     preguntasFinal.forEach((preg, index) => {
-        contenedor.innerHTML += `${preg[0]}<br><input type='text' id='final${index}'><br>`;
+        contenedor.innerHTML += ${preg[0]}<br><input type='text' id='final${index}'><br>;
     });
 }
 function finalizarEvaluacion() {
     let correctas = 0;
     preguntasFinal.forEach((preg, index) => {
-        const resp = document.getElementById(`final${index}`).value.trim().toLowerCase();
+        const resp = document.getElementById(final${index}).value.trim().toLowerCase();
         if (resp === preg[1].toLowerCase()) correctas++;
     });
     const resultado = document.getElementById('resultadoFinal');
     if (correctas >= 3) {
-        resultado.textContent = `¡Felicidades! Has aprobado el curso.`;
+        resultado.textContent = ¡Felicidades! Has aprobado el curso.;
         const trabajador = trabajadores.find(t => t.rut === document.getElementById('rutAcceso').value.trim());
         const fecha = new Date().toLocaleString();
         historial.push({...trabajador, curso:"Uso y Manejo de Extintores", fecha});
@@ -245,7 +278,7 @@ function actualizarHistorial() {
     const tabla = document.getElementById('tablaHistorial');
     tabla.innerHTML = "";
     historial.forEach(item => {
-        const fila = `<tr>
+        const fila = <tr>
             <td>${item.nombre}</td>
             <td>${item.rut}</td>
             <td>${item.cargo}</td>
@@ -254,14 +287,14 @@ function actualizarHistorial() {
             <td>${item.curso}</td>
             <td>${item.fecha}</td>
             <td><button onclick='generarCertificadoPorDatos("${item.nombre}","${item.rut}")'>Descargar</button></td>
-        </tr>`;
+        </tr>;
         tabla.innerHTML += fila;
     });
 }
 function exportarHistorialExcel() {
     let csv = "Nombre,RUT,Cargo,Centro,Fecha Ingreso,Curso,Fecha Aprobación\n";
     historial.forEach(h => {
-        csv += `${h.nombre},${h.rut},${h.cargo},${h.centro},${h.fechaIngreso},${h.curso},${h.fecha}\n`;
+        csv += ${h.nombre},${h.rut},${h.cargo},${h.centro},${h.fechaIngreso},${h.curso},${h.fecha}\n;
     });
     const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
     const link = document.createElement("a");
@@ -275,7 +308,7 @@ function generarCertificado(trabajador) {
     doc.setFontSize(16);
     doc.text("CERTIFICADO DE PARTICIPACIÓN", 20, 30);
     doc.setFontSize(12);
-    doc.text(`La empresa certifica que ${trabajador.nombre}, RUT ${trabajador.rut}`, 20, 50);
+    doc.text(La empresa certifica que ${trabajador.nombre}, RUT ${trabajador.rut}, 20, 50);
     doc.text("Ha participado y aprobado el curso: Uso y Manejo de Extintores", 20, 60);
     doc.text("Fecha: " + new Date().toLocaleDateString(), 20, 70);
     doc.text("Capacita SM Academy", 20, 80);
@@ -289,3 +322,5 @@ function generarCertificadoPorDatos(nombre, rut) {
 
 </body>
 </html>
+
+
