--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,44 +5,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Acceso - Capacita SM</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 <style>
-    html, body {
-    width: 100%;
-    height: 100%;
+html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
+
 body {
     font-family: Arial, sans-serif;
     background: url('fondo.png') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
+}
+
+.contenedor-central {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    flex-direction: column;
 }
-    @media (max-width: 768px) {
+
+@media (max-width: 768px) {
     body {
-        background-attachment: scroll; /* Evita bugs en móviles */
+        background-attachment: scroll;
     }
 }
-#menuPrincipal {
+
+#menuPrincipal, .seccion {
     background-color: rgba(255,255,255,0.95);
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
-    margin: 40px;
+    margin: 20px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 250px;
+    text-align: center;
 }
-#menuPrincipal h2 {
-    color: #4C7C46;
-    margin-bottom: 20px;
-}
-#menuPrincipal button {
+
+#menuPrincipal button, .boton-volver {
     width: 100%;
     margin: 10px 0;
     padding: 12px;
@@ -53,16 +55,11 @@ body {
     border-radius: 6px;
     cursor: pointer;
 }
-#menuPrincipal button:hover {
+
+#menuPrincipal button:hover, .boton-volver:hover {
     background-color: #3B6138;
 }
-#seccionTrabajador, #seccionEmpresa, #seccionHistorial, #moduloCurso, #evaluacionFinal, #mosaicoCursos {
-    display: none;
-    background: rgba(255,255,255,0.95);
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px;
-}
+
 .curso-tile {
     background: #A3C95A;
     padding: 10px;
@@ -73,34 +70,16 @@ body {
     border-radius: 6px;
     cursor: pointer;
 }
-.boton-volver {
-    margin-top: 15px;
-    background-color: #A3C95A;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 6px;
-    cursor: pointer;
-}
-.boton-volver:hover {
-    background-color: #4C7C46;
-}
 
-.boton-volver {
-    margin-top: 15px;
-    background-color: #A3C95A;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 6px;
-    cursor: pointer;
-}
-.boton-volver:hover {
-    background-color: #4C7C46;
+.seccion {
+    display: none;
 }
 </style>
 </head>
+
 <body>
+
+<div class="contenedor-central">
 
 <section id="menuPrincipal">
     <h2>Acceso</h2>
@@ -108,20 +87,20 @@ body {
     <button onclick="mostrarEmpresa()">Empresas</button>
 </section>
 
-<section id="seccionTrabajador">
+<section id="seccionTrabajador" class="seccion">
     <h2>Ingrese su RUT</h2>
     <input type="text" id="rutAcceso" placeholder="RUT">
     <button onclick="accederTrabajador()">Entrar</button>
     <button class="boton-volver" onclick="volverMenu()">Volver</button>
 </section>
 
-<section id="mosaicoCursos">
+<section id="mosaicoCursos" class="seccion">
     <h2>Cursos Disponibles</h2>
     <div class="curso-tile" onclick="verCurso()">Uso y Manejo de Extintores</div>
     <button class="boton-volver" onclick="volverTrabajador()">Volver</button>
 </section>
 
-<section id="moduloCurso">
+<section id="moduloCurso" class="seccion">
     <h2>Módulo 1: Uso y Manejo de Extintores</h2>
     <p>Los extintores deben estar visibles. <input type="text" id="p1"></p>
     <p>Los extintores no requieren mantención. <input type="text" id="p2"></p>
@@ -130,7 +109,7 @@ body {
     <button class="boton-volver" onclick="volverCursos()">Volver</button>
 </section>
 
-<section id="evaluacionFinal">
+<section id="evaluacionFinal" class="seccion">
     <h2>Evaluación Final</h2>
     <div id="preguntasFinal"></div>
     <button onclick="finalizarEvaluacion()">Enviar Evaluación</button>
@@ -138,8 +117,8 @@ body {
     <button class="boton-volver" onclick="volverModulo()">Volver</button>
 </section>
 
-<section id="seccionEmpresa">
-    <h2>INGRESO DE TRABAJADORES</h2>
+<section id="seccionEmpresa" class="seccion">
+    <h2>Ingreso de Trabajadores</h2>
     <input type="text" id="nombre" placeholder="Nombre Completo">
     <input type="text" id="rut" placeholder="RUT">
     <input type="text" id="cargo" placeholder="Cargo">
@@ -149,8 +128,8 @@ body {
     <button class="boton-volver" onclick="volverMenu()">Volver</button>
 </section>
 
-<section id="seccionHistorial">
-    <h3>HISTORIAL</h3>
+<section id="seccionHistorial" class="seccion">
+    <h3>Historial</h3>
     <table border="1">
         <thead>
             <tr><th>Nombre</th><th>RUT</th><th>Cargo</th><th>Centro</th><th>Fecha Ingreso</th><th>Curso</th><th>Fecha Aprobación</th><th>Certificado</th></tr>
@@ -161,6 +140,7 @@ body {
     <button class="boton-volver" onclick="volverMenu()">Volver</button>
 </section>
 
+</div>
 
 <script>
 let trabajadores = JSON.parse(localStorage.getItem("trabajadores")) || [];
@@ -168,22 +148,17 @@ let historial = JSON.parse(localStorage.getItem("historial")) || [];
 const preguntasFinal = [
     ["¿Los extintores deben estar en un lugar visible?", "si"],
     ["¿Los extintores no necesitan mantención?", "no"],
-    ["¿Se debe apuntar a la base del fuego?", "si"],
+    ["¿Se debe apuntar a la base del fuego?", "si"]
 ];
 
 function ocultarTodo() {
-    document.getElementById('menuPrincipal').style.display = 'none';
-    document.getElementById('seccionTrabajador').style.display = 'none';
-    document.getElementById('mosaicoCursos').style.display = 'none';
-    document.getElementById('moduloCurso').style.display = 'none';
-    document.getElementById('evaluacionFinal').style.display = 'none';
-    document.getElementById('seccionEmpresa').style.display = 'none';
-    document.getElementById('seccionHistorial').style.display = 'none';
+    document.querySelectorAll(".seccion").forEach(sec => sec.style.display = "none");
+    document.getElementById('menuPrincipal').style.display = "none";
 }
 
 function volverMenu() {
     ocultarTodo();
-    document.getElementById('menuPrincipal').style.display = 'flex';
+    document.getElementById('menuPrincipal').style.display = 'block';
 }
 function volverTrabajador() {
     ocultarTodo();
@@ -238,18 +213,18 @@ function cargarEvaluacionFinal() {
     const contenedor = document.getElementById('preguntasFinal');
     contenedor.innerHTML = "";
     preguntasFinal.forEach((preg, index) => {
-        contenedor.innerHTML += ${preg[0]}<br><input type='text' id='final${index}'><br>;
+        contenedor.innerHTML += `${preg[0]}<br><input type='text' id='final${index}'><br>`;
     });
 }
 function finalizarEvaluacion() {
     let correctas = 0;
     preguntasFinal.forEach((preg, index) => {
-        const resp = document.getElementById(final${index}).value.trim().toLowerCase();
-        if (resp === preg[1].toLowerCase()) correctas++;
+        const resp = document.getElementById(`final${index}`).value.trim().toLowerCase();
+        if (resp === preg[1]) correctas++;
     });
     const resultado = document.getElementById('resultadoFinal');
     if (correctas >= 3) {
-        resultado.textContent = ¡Felicidades! Has aprobado el curso.;
+        resultado.textContent = "¡Felicidades! Has aprobado el curso.";
         const trabajador = trabajadores.find(t => t.rut === document.getElementById('rutAcceso').value.trim());
         const fecha = new Date().toLocaleString();
         historial.push({...trabajador, curso:"Uso y Manejo de Extintores", fecha});
@@ -278,7 +253,7 @@ function actualizarHistorial() {
     const tabla = document.getElementById('tablaHistorial');
     tabla.innerHTML = "";
     historial.forEach(item => {
-        const fila = <tr>
+        tabla.innerHTML += `<tr>
             <td>${item.nombre}</td>
             <td>${item.rut}</td>
             <td>${item.cargo}</td>
@@ -287,14 +262,13 @@ function actualizarHistorial() {
             <td>${item.curso}</td>
             <td>${item.fecha}</td>
             <td><button onclick='generarCertificadoPorDatos("${item.nombre}","${item.rut}")'>Descargar</button></td>
-        </tr>;
-        tabla.innerHTML += fila;
+        </tr>`;
     });
 }
 function exportarHistorialExcel() {
     let csv = "Nombre,RUT,Cargo,Centro,Fecha Ingreso,Curso,Fecha Aprobación\n";
     historial.forEach(h => {
-        csv += ${h.nombre},${h.rut},${h.cargo},${h.centro},${h.fechaIngreso},${h.curso},${h.fecha}\n;
+        csv += `${h.nombre},${h.rut},${h.cargo},${h.centro},${h.fechaIngreso},${h.curso},${h.fecha}\n`;
     });
     const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
     const link = document.createElement("a");
@@ -308,9 +282,9 @@ function generarCertificado(trabajador) {
     doc.setFontSize(16);
     doc.text("CERTIFICADO DE PARTICIPACIÓN", 20, 30);
     doc.setFontSize(12);
-    doc.text(La empresa certifica que ${trabajador.nombre}, RUT ${trabajador.rut}, 20, 50);
+    doc.text(`La empresa certifica que ${trabajador.nombre}, RUT ${trabajador.rut}`, 20, 50);
     doc.text("Ha participado y aprobado el curso: Uso y Manejo de Extintores", 20, 60);
-    doc.text("Fecha: " + new Date().toLocaleDateString(), 20, 70);
+    doc.text(`Fecha: ${new Date().toLocaleDateString()}`, 20, 70);
     doc.text("Capacita SM Academy", 20, 80);
     doc.save("certificado.pdf");
 }
@@ -322,5 +296,3 @@ function generarCertificadoPorDatos(nombre, rut) {
 
 </body>
 </html>
-
-
