--- a/index.html/index.html
+++ b/index.html/index.html
@@ -29,11 +29,19 @@ body {
     flex-direction: column;
 }
 
+body {
+    background: url('fondo.png') no-repeat center center fixed;
+    background-size: cover;
+}
+
 @media (max-width: 768px) {
     body {
+        background: url('fondo.png') no-repeat center center;
+        background-size: contain;
         background-attachment: scroll;
     }
 }
+
 
 #menuPrincipal, .seccion {
     background-color: rgba(255,255,255,0.95);
