--- a/index.html/index.html
+++ b/index.html/index.html
@@ -67,6 +67,7 @@ html, body {
 #panelEmpresa {
     display: flex;
     height: 100vh;
+    width: 100%;
 }
 
 #menuLateral {
@@ -152,7 +153,7 @@ html, body {
     <button class="boton-volver" onclick="volverModulo()">Volver</button>
 </section>
 
-<!-- Panel Empresa Completo -->
+<!-- Panel Empresa SOLO visible al acceder como empresa -->
 <div id="panelEmpresa">
     <div id="menuLateral">
         <h3>Datos Empresa</h3>
@@ -309,3 +310,4 @@ function exportarHistorialExcel() {
 
 </body>
 </html>
+
