--- a/index.html/index.html
+++ b/index.html/index.html
@@ -161,7 +161,7 @@ html, body {
     <button class="boton-volver" onclick="volverModulo()">Volver</button>
 </section>
 
-<div id="panelEmpresa">
+<div id="panelEmpresa" style="display: none;">
     <div id="menuLateral">
         <h3>Datos Empresa</h3>
         <p>Nombre: Empresa XYZ</p>
@@ -194,6 +194,7 @@ html, body {
         </div>
     </div>
 </div>
+
 
 <script>
 const usuarioValido = "empresa";
